package dk.dtu.matador.objects.fields;

import java.awt.*;

public class BreweryField extends PropertyField {
    public BreweryField(String subType, Color color, Color textColor, String fieldName) {
        super(subType, color, textColor, fieldName);
    }
}
