package dk.dtu.matador.objects.fields;

import java.awt.*;

public class FerryField extends PropertyField {
    public FerryField(String subType, Color color, Color textColor, String fieldName) {
        super(subType, color, textColor, fieldName);
    }
}
