@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

package fields {
    abstract class Field {
        -fieldID : UUID

        {abstract} +doLandingAction(playerID:UUID) : void
    }

    class StartField {
    }

    abstract class PropertyField {
        -color : Color

        +isAvailable() : boolean
    }

    class ChanceField {
    }

    class JailField {
    }

    class BreakField {
    }

    class GoToJailField {
    }

    class TaxField {
    }

    Field <|-- StartField
    Field <|-- PropertyField
    Field <|-- ChanceField
    Field <|-- JailField
    Field <|-- BreakField
    Field <|-- GoToJailField
    Field <|-- TaxField

    class StreetField {
    }

    class FerryField {
    }

    class BreweryField {
    }

    PropertyField <|-- StreetField
    PropertyField <|-- FerryField
    PropertyField <|-- BreweryField
}

@enduml